--- a/assets/style.css
+++ b/assets/style.css
@@ -123,7 +123,15 @@
     transform: scale(1.05);
     background: rgba(255, 255, 255, 0.1);
   }
-  
+  .footer-site a {
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.1em;
+    margin-bottom: 15px;
+    display: block;
+    text-shadow: 2px 2px 3px #000000da;
+  }
   /* Always display hamburger menu */
   @media (min-width: 768px) {
     .hamburger {
@@ -408,6 +416,7 @@
     font-size: 0.9rem;
     line-height: 1.4;
     opacity: 0.9;
+    text-shadow: 2px 2px 3px #000000da;
   }
   
   .footer-bottom {
