--- a/assets/home.css
+++ b/assets/home.css
@@ -47,13 +47,18 @@
   
   .state-card h2 {
     margin: 10px 0;
-    color: var(--primary);
-    font-size: 2rem;
-    filter: drop-shadow(1px 1px 1px rgb(0, 0, 0));
+    font-size: 2em; /* Ajuste conforme necessário */
+    font-weight: bold;
+    background: linear-gradient(130deg, var(--primary), var(--secondary));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-align: center;
+    filter: drop-shadow(2px 2px 2px rgb(163, 162, 162));
   }
   
   .state-card p {
-    color: var(--text);
+    color: var(--secondary);
     
   }
   
